[package]
name = "eled"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "4.1"
async-std = { version = "1.12", features = [ "attributes" ] }
