[package]
name = "eled"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = [ "macros", "rt" ] }
zbus = { version = "4.1", default-features = false, features = [ "tokio" ] }
