[package]
name = "eled"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.10", default-features = false, features = [ "auto-color" ]}
log = "0.4.4"
nix = { version = "0.28", default-features = false, features = [ "signal" ] }
tokio = { version = "1.36", features = [ "macros", "rt" ] }
zbus = { version = "4.1", default-features = false, features = [ "tokio" ] }
zbus_polkit = { version = "4.0", default-features = false, features = [ "tokio" ] }
pty-process = { git = "https://github.com/YtvwlD/pty-process.git", branch = "from-fd", features = [ "async" ] }
